update name to beforeold

--- a/less/highlight.less
+++ b/less/highlight.less
@@ -208,7 +208,7 @@ pre.highlight {
   color: #a6e22e;
 }
 
-// Customize for Hux Blog
+// Customize for beforeold blog
 .highlighter-rouge .highlight {
   margin-bottom: 10px;
   border-radius: 6px;
