--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
                     Powered by <a href="http://huangxuan.me">beforeold blog</a> |
                     <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
                         height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
+                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=beforeold.github.io&type=star&count=true">
                     </iframe>
                 </p>
             </div>
